--- a/MusicLibrary.Web/Pages/_ViewImports.cshtml
+++ b/MusicLibrary.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using MusicLibrary.Web
-@namespace MusicLibrary.Web.Pages
+﻿@namespace MusicLibrary.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
