--- a/src/MusicLibrary.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/MusicLibrary.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,16 +24,13 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']">
-              Counter
-            </a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">
-              Fetch data
-            </a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/search']">Search</a>
           </li>
         </ul>
       </div>
