--- a/src/MusicLibrary.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/MusicLibrary.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -30,7 +30,7 @@
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/search']">Search</a>
+            <app-search></app-search>
           </li>
         </ul>
       </div>
