--- a/src/MusicLibrary.Web/ClientApp/src/app/search/search.component.html
+++ b/src/MusicLibrary.Web/ClientApp/src/app/search/search.component.html
@@ -1,3 +1,3 @@
 <div>
-  <input type="text" placeholder="Search" [(ngModel)]="searchTerm" (change)="search()"/>
+  <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchTerm" (change)="search()"/>
 </div>
