Query more collections

--- a/src/MusicLibrary.Web/ClientApp/src/app/search-result/search-result.component.html
+++ b/src/MusicLibrary.Web/ClientApp/src/app/search-result/search-result.component.html
@@ -1,2 +1,15 @@
-<p>search-result works!</p>
-<pre>{{result | json}}</pre>
+<h4>Albums</h4>
+<hr />
+<pre>{{albums | json}}</pre>
+
+<h4>Playlists</h4>
+<hr />
+<pre>{{playlists | json}}</pre>
+
+<h4>Singles</h4>
+<hr />
+<pre>{{singles | json}}</pre>
+
+<h4>EPs</h4>
+<hr />
+<pre>{{eps | json}}</pre>
